--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <title>Document</title>
 </head>
 <body>
+
+    <main>
+        <!-- up section -->
+
+        <section>
+            <!-- intro section -->
+             <h1>10,000+ of our users love our product</h1>
+            <p>We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
+        </section>
+
+        <section>
+            <!-- starts section -->
+            <div>
+                <h2>Rated 5 stars in Reviews</h2>
+                <h2>Rated 5 stars in Report Guru</h2>
+                <h2>Rated 5 stars in BestTech</h2>
+            </div>
+        </section>
+    </main>
+
+    <section>
+        <!-- card section -->
+        <div class="card, card_1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde, dicta eligendi maxime id libero molestias qui quis sit! Numquam tempore doloremque dolores et distinctio non maxime possimus ullam quisquam!
+        </div>
+
+        <div class="card, card_2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde, dicta eligendi maxime id libero molestias qui quis sit! Numquam tempore doloremque dolores et distinctio non maxime possimus ullam quisquam!
+        </div>
+
+        <div class="card, card_3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde, dicta eligendi maxime id libero molestias qui quis sit! Numquam tempore doloremque dolores et distinctio non maxime possimus ullam quisquam!
+        </div>
+
+    </section>
     
 </body>
 </html>
