--- a/index.html
+++ b/index.html
@@ -27,18 +27,61 @@
         </section>
     </main>
 
-    <section>
+    <section class = "cards_section">
         <!-- card section -->
-        <div class="card, card_1">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde, dicta eligendi maxime id libero molestias qui quis sit! Numquam tempore doloremque dolores et distinctio non maxime possimus ullam quisquam!
+        <div class="card card_1">
+
+            <header class="card_header">
+                <image >
+                    <img src="/statics/image-colton.jpg" alt="Colton Smith" class="image_icon">
+                </image>
+
+                <div class="card_header_text">
+                    <h3>Colton Smith</h3>
+                    <p>Verified Buyer</p>
+                </div>
+
+            </header>
+
+            <p>"We need the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time.Excelent!"</p>
+
         </div>
 
-        <div class="card, card_2">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde, dicta eligendi maxime id libero molestias qui quis sit! Numquam tempore doloremque dolores et distinctio non maxime possimus ullam quisquam!
+        <div class="card card_2">
+
+            <header class="card_header">
+                <image >
+                    <img class="image_icon" src="/statics/image-irene.jpg" alt="Irene Roberts" >
+                </image>
+
+                <div class="card_header_text">
+                    <h3>Irene Roberts</h3>
+                    <p>Verified Buyer</p>
+                </div>
+
+            </header>
+
+
+            <p>"Customer service is always excellent and very quick to turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
+
         </div>
 
-        <div class="card, card_3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis unde, dicta eligendi maxime id libero molestias qui quis sit! Numquam tempore doloremque dolores et distinctio non maxime possimus ullam quisquam!
+        <div class="card card_3">
+
+            <header class="card_header">
+                <image >
+                    <img src="/statics/image-anne.jpg" alt="Anne Wallace" class="image_icon">
+                </image>
+
+                <div class="card_header_text">
+                    <h3>Anne Wallace</h3>
+                    <p>Verified Buyer</p>
+                </div>
+
+            </header>
+
+            <p>"Put an order with this company and can only praise them for very high standard. Will definitely use them again and recommend them to everyone!"</p>
+
         </div>
 
     </section>
