--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
                 <div class="card_header_text">
                     <h3>Colton Smith</h3>
-                    <p>Verified Buyer</p>
+                    <h4 class="card_header_text_subtitle">Verified Buyer</h4>
                 </div>
 
             </header>
 
-            <p>"We need the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time.Excelent!"</p>
+            <p>" We need the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excelent! "</p>
 
         </div>
 
@@ -56,13 +56,13 @@
 
                 <div class="card_header_text">
                     <h3>Irene Roberts</h3>
-                    <p>Verified Buyer</p>
+                    <h4 class="card_header_text_subtitle">Verified Buyer</h4>
                 </div>
 
             </header>
 
 
-            <p>"Customer service is always excellent and very quick to turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."</p>
+            <p>" Customer service is always excellent and very quick to turn around. Completely delighted with the simplicity of the purchase and the speed of delivery. "</p>
 
         </div>
 
@@ -75,12 +75,12 @@
 
                 <div class="card_header_text">
                     <h3>Anne Wallace</h3>
-                    <p>Verified Buyer</p>
+                    <h4 class="card_header_text_subtitle">Verified Buyer</h4>
                 </div>
 
             </header>
 
-            <p>"Put an order with this company and can only praise them for very high standard. Will definitely use them again and recommend them to everyone!"</p>
+            <p>" Put an order with this company and can only praise them for very high standard. Will definitely use them again and recommend them to everyone! "</p>
 
         </div>
 
