--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 
-    <main>
+    <main class="up_section">
         <!-- up section -->
 
-        <section>
+        <section class="welcome_section">
             <!-- intro section -->
              <h1>10,000+ of our users love our product</h1>
             <p>We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
         </section>
 
-        <section>
+        <section class="stars_section">
             <!-- starts section -->
             <div>
                 <h2>Rated 5 stars in Reviews</h2>
@@ -26,6 +26,8 @@
             </div>
         </section>
     </main>
+
+
 
     <section class = "cards_section">
         <!-- card section -->
