--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- A falta del responsive design todo se fue a ojo -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,17 +15,50 @@
 
         <section class="welcome_section">
             <!-- intro section -->
-             <h1>10,000+ of our users love our product</h1>
-            <p>We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
+                <h1 class="welcome_header">10,000+ of our users love our products.</h1>
+                <p>We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
         </section>
 
         <section class="stars_section">
             <!-- starts section -->
-            <div>
-                <h2>Rated 5 stars in Reviews</h2>
-                <h2>Rated 5 stars in Report Guru</h2>
-                <h2>Rated 5 stars in BestTech</h2>
-            </div>
+                <div class="starts start_1">
+                    <image>
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                    </image>
+
+                        <p class="stars_text">Rated 5 Stars in Reviews</p>
+                </div>
+
+                <div class="starts start_2">
+
+                    <image>
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                    </image>
+
+                    <p class="stars_text">Rated 5 Stars in Report Guru</p>
+
+                </div>
+
+
+                <div class="starts start_3">
+                     <image>
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="/statics/icon-star.svg" alt="star icon" class="star_icon">
+                    </image>
+
+                    <p class="stars_text">Rated 5 Stars in BestTech</p>
+                </div>
         </section>
     </main>
 
