--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <main class="up_section">
+    <main class="up_section" style="background-image: url('https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/bg-pattern-top-desktop.svg');">
         <!-- up section -->
 
         <section class="welcome_section">
@@ -62,7 +62,7 @@
         </section>
     </main>
 
-    <section class = "cards_section">
+    <section class = "cards_section" style="background-image: url('https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/bg-pattern-bottom-desktop.svg');">
         <!-- card section -->
         <div class="card card_1">
 
