responsive design by chapi

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
                     <image>
                         <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon"class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon"class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon"class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon"class="star_icon">
                     </image>
 
                     <p class="stars_text">Rated 5 Stars in Report Guru</p>
@@ -50,11 +50,11 @@
 
                 <div class="starts start_3">
                      <image>
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" icon" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" icon" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" icon" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" icon" class="star_icon">
-                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" icon" class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
+                        <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
                     </image>
 
                     <p class="stars_text">Rated 5 Stars in BestTech</p>
