--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </section>
 
         <section class="stars_section">
-            <!-- starts section -->
-                <div class="starts start_1">
+            <!-- stars section -->
+                <div class="stars star_1">
                     <image>
                         <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
                         <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
@@ -33,7 +33,7 @@
                         <p class="stars_text">Rated 5 Stars in Reviews</p>
                 </div>
 
-                <div class="starts start_2">
+                <div class="stars star_2">
 
                     <image>
                         <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" class="star_icon">
@@ -48,7 +48,7 @@
                 </div>
 
 
-                <div class="starts start_3">
+                <div class="stars star_3">
                      <image>
                         <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
                         <img src="https://raw.githubusercontent.com/CharFranR/Programacion_web_clase_practica_1/d2c2f99bc1bf85b77d142bba4930cf31aa94a814/statics/icon-star.svg" alt="star icon" class="star_icon">
